# churn_detection

./: .gitignore  Dockerfile.api  Dockerfile.mlflow  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
data/processed/v1/: schema.json  test.csv  train.csv
mlruns/0/: meta.yaml
mlruns/550612897633589605/: meta.yaml
mlruns/550612897633589605/09f37298d21e4656875257bb48520e6a/: meta.yaml
mlruns/550612897633589605/0f6c995776b24c7fb9085d2efd22bc98/: meta.yaml
mlruns/550612897633589605/20f0ad420c93490fb9d6ef4fe8e447a6/: meta.yaml
mlruns/550612897633589605/2f361e767c704830947a6f8885b9aa00/: meta.yaml
mlruns/550612897633589605/318d05aef57e43f2b8e063339516ee69/: meta.yaml
mlruns/550612897633589605/3819e891e7ad46a7b0b4395c46f60a7a/: meta.yaml
mlruns/550612897633589605/464727ca1e8a44afb0f202de5e9a5dc5/: meta.yaml
mlruns/550612897633589605/724b5cc629ab46ec8bbf0a96b1b2d5ba/: meta.yaml
mlruns/550612897633589605/8391da2041fb43bda161fb35905ecb66/: meta.yaml
mlruns/550612897633589605/9bc039cba59d4c0f88b3b8a46aff6246/: meta.yaml
mlruns/550612897633589605/a67f924c70ed4be0a346569c599cd559/: meta.yaml
mlruns/550612897633589605/b211de9f0e23424291c4d0a6e5d07c39/: meta.yaml
mlruns/550612897633589605/e4a4ab7507a94a87b2059ed4015b52f7/: meta.yaml
mlruns/667346558550378901/: meta.yaml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model_experiment.ipynb
src/app/: main.py
src/scripts/: download_data.py  preprocess_data.py
src/training/: train_model.py
tests/: test_api.py
(+383 files in other folders)
